# django-wcwidth-filter

./: LICENSE  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test_settings.py
wcwidth_filter/: apps.py
wcwidth_filter/templatetags/: wcwidth.py
wcwidth_filter/tests/: test_template_filters.py
