[metadata]
name = django-wcwidth-filter
version = attr: wcwidth_filter.__version__

url = https://github.com/c-bata/django-wcwidth-filter
author = Masashi Shibata
author_email = m.shibata1020@gmail.com
description = Django Template Filters for multi-width characters
long_description = file: README.rst
license = MIT License
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Framework :: Django
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    Django
    wcwidth

[flake8]
max-line-length = 120
exclude =
    .tox/,
    venv/,
    .eggs,
    build/,
    dist/,
